cmake_minimum_required(VERSION 3.12.0)
project(leetcode VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(BUILD_SHARED_LIBS ON)
# find_package(fmt REQUIRED)
add_subdirectory(thirdparty/fmt)
add_subdirectory(thirdparty/dbg-macro)
add_definitions(-DLEETCODE)
add_executable(leetcode main.cpp)
target_link_libraries(leetcode fmt)
target_link_libraries(leetcode dbg_macro)
